[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tesla-dashboard"
version = "0.1.0"
description = "Local dashboard for Tesla stock price and news"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "pydantic>=2.6.0",
  "python-dateutil>=2.8.2",
  "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "coverage>=7.4.0",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "respx>=0.20.2",
  "ruff>=0.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.build.targets.sdist]
include = ["src/app", "tests", "README.md", "Makefile", "pyproject.toml"]
